change autotest logic

--- a/SmartEcoA/ClientApp/src/app/administration/carposts.component.html
+++ b/SmartEcoA/ClientApp/src/app/administration/carposts.component.html
@@ -24,4 +24,10 @@
   <a i18n-matTooltip="@@CarPostDataAutoTests" class="btn" [routerLink]="['/carpostdataautotests']" matTooltip="Car Posts Data (Auto Test)">
     <span i18n="@@CarPostDataAutoTests">Car Posts Data (Auto Test)</span>
   </a>
+  <a i18n-matTooltip="@@TypeEcoClasses" class="btn" [routerLink]="['/typeecoclasses']" matTooltip="Type Eco Classes">
+    <span i18n="@@TypeEcoClasses">Type Eco Classes</span>
+  </a>
+  <a i18n-matTooltip="@@Testers" class="btn" [routerLink]="['/testers']" matTooltip="Testers">
+    <span i18n="@@Testers">Testers</span>
+  </a>
 </div>
