--- a/SmartEcoA/ClientApp/src/app/carpostdataautotests/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdataautotests/details.component.html
@@ -22,8 +22,6 @@
       <dd>{{carpostdataautotest?.CarModelAutoTest?.Name}}</dd>
       <dt i18n="@@Number">Number</dt>
       <dd>{{carpostdataautotest?.Number}}</dd>
-      <dt i18n="@@Version">Version</dt>
-      <dd>{{carpostdataautotest?.Version}}</dd>
       <dt i18n="@@DOPOL1">DOPOL1</dt>
       <dd>{{carpostdataautotest?.DOPOL1}}</dd>
       <dt i18n="@@DOPOL2">DOPOL2</dt>
@@ -70,12 +68,22 @@
       <dd>{{carpostdataautotest?.MIN_NO}}</dd>
       <dt i18n="@@MAX_NO">MAX_NO</dt>
       <dd>{{carpostdataautotest?.MAX_NO}}</dd>
-      <dt i18n="@@ATNUM">ATNUM</dt>
-      <dd>{{carpostdataautotest?.ATNUM}}</dd>
-      <dt i18n="@@MIN_NOx">MIN_NOx</dt>
-      <dd>{{carpostdataautotest?.MIN_NOx}}</dd>
-      <dt i18n="@@MAX_NOx">MAX_NOx</dt>
-      <dd>{{carpostdataautotest?.MAX_NOx}}</dd>
+      <dt i18n="@@Temperature">Temperature</dt>
+      <dd>{{carpostdataautotest?.Temperature}}</dd>
+      <dt i18n="@@Pressure">Pressure</dt>
+      <dd>{{carpostdataautotest?.Pressure}}</dd>
+      <dt i18n="@@GasSerialNumber">Gas Serial Number</dt>
+      <dd>{{carpostdataautotest?.GasSerialNumber}}</dd>
+      <dt i18n="@@GasCheckDate">Gas Check Date</dt>
+      <dd>{{carpostdataautotest?.GasCheckDate}}</dd>
+      <dt i18n="@@MeteoSerialNumber">Meteo Serial Number</dt>
+      <dd>{{carpostdataautotest?.MeteoSerialNumber}}</dd>
+      <dt i18n="@@MeteoCheckDate">Meteo Check Date</dt>
+      <dd>{{carpostdataautotest?.MeteoCheckDate}}</dd>
+      <dt i18n="@@TestNumber">Test Number</dt>
+      <dd>{{carpostdataautotest?.TestNumber}}</dd>
+      <dt i18n="@@Tester">Tester</dt>
+      <dd>{{carpostdataautotest?.Tester?.Name}}</dd>
     </dl>
   </mat-card-content>
   <mat-card-actions align="center">
