--- a/SmartEcoA/ClientApp/src/app/reports/createcarpostdatasmokemeterlog.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarpostdatasmokemeterlog.component.html
@@ -35,6 +35,13 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
+      <mat-form-field class="not-first">
+        <mat-label i18n="@@TypeReport">Type Report</mat-label>
+        <mat-select formControlName="SelectedTypeReport">
+          <mat-option value="false">Word</mat-option>
+          <mat-option value="true">PDF</mat-option>
+        </mat-select>
+      </mat-form-field>
       <br />
 
     </mat-card-content>
