--- a/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/create.component.html
+++ b/SmartEcoA/ClientApp/src/app/carmodelsmokemeters/create.component.html
@@ -21,7 +21,27 @@
         <mat-error i18n="@@More50Characters" *ngIf="error('Name', 'maxlength')">You have more than 50 characters</mat-error>
       </mat-form-field>
       <br />
-      <mat-checkbox i18n="@@Boost" matInput formControlName="Boost" id="boost">Boost</mat-checkbox>
+      <mat-form-field>
+        <mat-label i18n="@@TypeEcoClass">Type Eco Class</mat-label>
+        <mat-select formControlName="TypeEcoClassId" id="typeecoclassid">
+          <mat-option *ngFor="let typeecoclass of typeecoclasses" [value]="typeecoclass.Id">
+            {{typeecoclass.Name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input i18n-placeholder="@@Category" matInput type="text" placeholder="Category" formControlName="Category" id="category">
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <mat-label i18n="@@EngineType">Engine Type</mat-label>
+        <mat-select formControlName="EngineType" id="enginetype">
+          <mat-option [value]="0" i18n="@@Petrol">Petrol</mat-option>
+          <mat-option [value]="1" i18n="@@Diesel">Diesel</mat-option>
+        </mat-select>
+        <mat-error i18n="@@CarPostRequired" *ngIf="error('CarPostId', 'required')">Car Post is required</mat-error>
+      </mat-form-field>
       <br />
       <mat-form-field>
         <mat-label i18n="@@CarPost">Car Post</mat-label>
@@ -39,15 +59,61 @@
             <span i18n="@@ApprovalMark">Has an approval mark</span>
           </mat-panel-title>
         </mat-expansion-panel-header>
+      </mat-expansion-panel>
+      <br />
+      <div *ngIf="carmodelsmokemeterForm.controls['EngineType'].value==0">
         <mat-form-field>
-          <input i18n-placeholder="@@DFreeMark" i18n-matTooltip="@@DFreeMark" matInput type="number" placeholder="Maximum permissible values of the light absorption coefficient k indicated on the approval mark in free acceleration" matTooltip="Maximum permissible values of the light absorption coefficient k indicated on the approval mark in free acceleration" formControlName="DFreeMark" id="dfreemark">
+          <input i18n-placeholder="@@MIN_TAH" i18n-matTooltip="@@MIN_TAH" matInput type="number" placeholder="Minimum revolutions, 1/min" matTooltip="Minimum revolutions, 1/min" formControlName="MIN_TAH" id="min_tah">
         </mat-form-field>
         <br />
-        <!--<mat-form-field>
-          <input i18n-placeholder="@@DMaxMark" matInput type="number" placeholder="DMaxMark" formControlName="DMaxMark" id="dmaxmark">
+        <mat-form-field>
+          <input i18n-placeholder="@@DEL_MIN" i18n-matTooltip="@@DEL_MIN" matInput type="number" placeholder="Minimum revolutions, +/-, 1/min" matTooltip="Minimum revolutions, +/-, 1/min" formControlName="DEL_MIN" id="del_min">
         </mat-form-field>
-        <br />-->
-      </mat-expansion-panel>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@MAX_TAH" i18n-matTooltip="@@MAX_TAH" matInput type="number" placeholder="Increased revolutions, 1/min" matTooltip="Increased revolutions, 1/min" formControlName="MAX_TAH" id="max_tah">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@DEL_MAX" i18n-matTooltip="@@DEL_MAX" matInput type="number" placeholder="Increased revolutions, +/-, 1/min" matTooltip="Increased revolutions, +/-, 1/min" formControlName="DEL_MAX" id="del_max">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@MIN_CO" i18n-matTooltip="@@MIN_CO" matInput type="number" placeholder="CO at minimum revolutions, %" matTooltip="CO at minimum revolutions, %" formControlName="MIN_CO" id="min_co">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@MAX_CO" i18n-matTooltip="@@MAX_CO" matInput type="number" placeholder="CO at increased revolutions, %" matTooltip="CO at increased revolutions, %" formControlName="MAX_CO" id="max_co">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@MIN_CH" i18n-matTooltip="@@MIN_CH" matInput type="number" placeholder="CH at minimum revolutions, ppm" matTooltip="CH at minimum revolutions, ppm" formControlName="MIN_CH" id="min_ch">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@MAX_CH" i18n-matTooltip="@@MAX_CH" matInput type="number" placeholder="CH at increased revolutions, ppm" matTooltip="CH at increased revolutions, ppm" formControlName="MAX_CH" id="max_ch">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@L_MIN" i18n-matTooltip="@@L_MIN" matInput type="number" placeholder="λ minimum" matTooltip="λ minimum" formControlName="L_MIN" id="l_min">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@L_MAX" i18n-matTooltip="@@L_MAX" matInput type="number" placeholder="λ maximum" matTooltip="λ maximum" formControlName="L_MAX" id="l_max">
+        </mat-form-field>
+      </div>
+      <div *ngIf="carmodelsmokemeterForm.controls['EngineType'].value==1">
+        <mat-form-field>
+          <input i18n-placeholder="@@K_SVOB" i18n-matTooltip="@@K_SVOB" matInput type="number" placeholder="The attenuation index of the luminous flux K at free acceleration, 1/m" matTooltip="The attenuation index of the luminous flux K at free acceleration, 1/m" formControlName="K_SVOB" id="k_svob">
+        </mat-form-field>
+        <br />
+        <mat-form-field>
+          <input i18n-placeholder="@@K_MAX" i18n-matTooltip="@@K_MAX" matInput type="number" placeholder="Luminous flux attenuation index K at maximum rotation frequency, 1/m" matTooltip="Luminous flux attenuation index K at maximum rotation frequency, 1/m" formControlName="K_MAX" id="k_max">
+        </mat-form-field>
+      </div>
+      <mat-form-field hidden="hidden">
+        <input matInput type="number" formControlName="ParadoxId" id="paradoxid">
+      </mat-form-field>
     </mat-card-content>
     <mat-card-actions align="center">
       <button i18n="@@Create" mat-raised-button color="primary" [disabled]="!carmodelsmokemeterForm.valid">Create</button>
