--- a/SmartEcoA/ClientApp/src/app/carpostdatasmokemeters/details.component.html
+++ b/SmartEcoA/ClientApp/src/app/carpostdatasmokemeters/details.component.html
@@ -22,13 +22,68 @@
       <dd>{{carpostdatasmokemeter?.CarModelSmokeMeter?.Name}}</dd>
       <dt i18n="@@Number">Number</dt>
       <dd>{{carpostdatasmokemeter?.Number}}</dd>
-      <dt i18n="@@RunIn">RunIn</dt>
-      <dd i18n="@@Yes" *ngIf="carpostdatasmokemeter?.RunIn==true">Yes</dd>
-      <dd i18n="@@No" *ngIf="carpostdatasmokemeter?.RunIn==false">No</dd>
-      <dt i18n="@@DFree">DFree</dt>
-      <dd>{{carpostdatasmokemeter?.DFree}}</dd>
-      <dt i18n="@@NDFree">NDFree</dt>
-      <dd>{{carpostdatasmokemeter?.NDFree}}</dd>
+      <dt i18n="@@DOPOL1">DOPOL1</dt>
+      <dd>{{carpostdatasmokemeter?.DOPOL1}}</dd>
+      <dt i18n="@@DOPOL2">DOPOL2</dt>
+      <dd>{{carpostdatasmokemeter?.DOPOL2}}</dd>
+      <dt i18n="@@MIN_TAH">MIN_TAH</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_TAH}}</dd>
+      <dt i18n="@@MIN_CO">MIN_CO</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_CO}}</dd>
+      <dt i18n="@@MIN_CH">MIN_CH</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_CH}}</dd>
+      <dt i18n="@@MIN_CO2">MIN_CO2</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_CO2}}</dd>
+      <dt i18n="@@MIN_O2">MIN_O2</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_O2}}</dd>
+      <dt i18n="@@MIN_L">MIN_L</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_L}}</dd>
+      <dt i18n="@@MAX_TAH">MAX_TAH</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_TAH}}</dd>
+      <dt i18n="@@MAX_CO">MAX_CO</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_CO}}</dd>
+      <dt i18n="@@MAX_CH">MAX_CH</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_CH}}</dd>
+      <dt i18n="@@MAX_CO2">MAX_CO2</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_CO2}}</dd>
+      <dt i18n="@@MAX_O2">MAX_O2</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_O2}}</dd>
+      <dt i18n="@@MAX_L">MAX_L</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_L}}</dd>
+      <dt i18n="@@ZAV_NOMER">ZAV_NOMER</dt>
+      <dd>{{carpostdatasmokemeter?.ZAV_NOMER}}</dd>
+      <dt i18n="@@K_1">K_1</dt>
+      <dd>{{carpostdatasmokemeter?.K_1}}</dd>
+      <dt i18n="@@K_2">K_2</dt>
+      <dd>{{carpostdatasmokemeter?.K_2}}</dd>
+      <dt i18n="@@K_3">K_3</dt>
+      <dd>{{carpostdatasmokemeter?.K_3}}</dd>
+      <dt i18n="@@K_4">K_4</dt>
+      <dd>{{carpostdatasmokemeter?.K_4}}</dd>
+      <dt i18n="@@K_SVOB">K_SVOB</dt>
+      <dd>{{carpostdatasmokemeter?.K_SVOB}}</dd>
+      <dt i18n="@@K_MAX">K_MAX</dt>
+      <dd>{{carpostdatasmokemeter?.K_MAX}}</dd>
+      <dt i18n="@@MIN_NO">MIN_NO</dt>
+      <dd>{{carpostdatasmokemeter?.MIN_NO}}</dd>
+      <dt i18n="@@MAX_NO">MAX_NO</dt>
+      <dd>{{carpostdatasmokemeter?.MAX_NO}}</dd>
+      <dt i18n="@@Temperature">Temperature</dt>
+      <dd>{{carpostdatasmokemeter?.Temperature}}</dd>
+      <dt i18n="@@Pressure">Pressure</dt>
+      <dd>{{carpostdatasmokemeter?.Pressure}}</dd>
+      <dt i18n="@@GasSerialNumber">Gas Serial Number</dt>
+      <dd>{{carpostdatasmokemeter?.GasSerialNumber}}</dd>
+      <dt i18n="@@GasCheckDate">Gas Check Date</dt>
+      <dd>{{carpostdatasmokemeter?.GasCheckDate}}</dd>
+      <dt i18n="@@MeteoSerialNumber">Meteo Serial Number</dt>
+      <dd>{{carpostdatasmokemeter?.MeteoSerialNumber}}</dd>
+      <dt i18n="@@MeteoCheckDate">Meteo Check Date</dt>
+      <dd>{{carpostdatasmokemeter?.MeteoCheckDate}}</dd>
+      <dt i18n="@@TestNumber">Test Number</dt>
+      <dd>{{carpostdatasmokemeter?.TestNumber}}</dd>
+      <dt i18n="@@Tester">Tester</dt>
+      <dd>{{carpostdatasmokemeter?.Tester?.Name}}</dd>
     </dl>
   </mat-card-content>
   <mat-card-actions align="center">
