--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,9 @@
     <span i18n="@@Dashboard">Dashboard</span>
   </a>
   <br />
-
+  <a i18n-matTooltip="@@Posts" class="btn" [routerLink]="['/dashboard/dashboardposts']" matTooltip="Posts">
+    <span i18n="@@Posts">Posts</span>
+  </a>
   <a i18n-matTooltip="@@CarPosts" class="btn" [routerLink]="['/dashboard/dashboardcarposts']" matTooltip="Car Posts">
     <span i18n="@@CarPosts">Car Posts</span>
   </a>
