--- a/SmartEcoA/ClientApp/src/app/dashboard/dashboardposts.component.html
+++ b/SmartEcoA/ClientApp/src/app/dashboard/dashboardposts.component.html
@@ -12,50 +12,86 @@
 <div class="grid-container">
   <mat-grid-list cols="10" rowHeight="50px">
 
-    <mat-grid-tile [colspan]="10" [rowspan]="5">
+    <mat-grid-tile [colspan]="10" [rowspan]="2">
       <mat-card class="dashboard-card">
         <mat-card-content class="dashboard-card-content">
+
           <mat-form-field>
             <mat-label i18n="@@Background">Background</mat-label>
-              <mat-select id="background" [formControl]="background" (selectionChange)="changeBackground($event.value)">
-                <mat-option value="OSM">OpenStreetMap</mat-option>
-                <mat-option value="BingAerialWithLabels">Bing Aerial</mat-option>
-                <mat-option value="BingRoadStatic">Bing Road (static)</mat-option>
-                <mat-option value="BingRoadDynamic">Bing Road (dynamic)</mat-option>
-                <mat-option value="HERENormalDay">HERE Normal Day</mat-option>
-                <mat-option value="HERENormalDayTransit">HERE Normal Day Transit</mat-option>
-                <mat-option value="HERETerrainDay">HERE Terrain Day</mat-option>
-                <mat-option value="HEREHybridDay">HERE Hybrid Day</mat-option>
-                <mat-option value="StamenWatercolor">Stamen Watercolor</mat-option>
-                <mat-option value="StamenTerrain">Stamen Terrain</mat-option>
-                <mat-option value="StamenToner">Stamen Toner</mat-option>
-                <mat-option value="ArcGIS">ArcGIS</mat-option>
-                <mat-option value="ThunderforestOpenCycleMap">Thunderforest OpenCycleMap</mat-option>
-                <mat-option value="ThunderforestTransport">Thunderforest Transport</mat-option>
-                <mat-option value="ThunderforestLandscape">Thunderforest Landscape</mat-option>
-                <mat-option value="ThunderforestOutdoors">Thunderforest Outdoors</mat-option>
-                <mat-option value="ThunderforestTransportDark">Thunderforest Transport Dark</mat-option>
-                <mat-option value="ThunderforestSpinalMap">Thunderforest Spinal Map</mat-option>
-                <mat-option value="ThunderforestPioneer">Thunderforest Pioneer</mat-option>
-                <mat-option value="ThunderforestMobileAtlas">Thunderforest Mobile Atlas</mat-option>
-                <mat-option value="ThunderforestNeighbourhood">Thunderforest Neighbourhood</mat-option>
-              </mat-select>
+            <mat-select id="background" [formControl]="background" (selectionChange)="changeBackground($event.value)">
+              <mat-option value="OSM">OpenStreetMap</mat-option>
+              <mat-option value="BingAerialWithLabels">Bing Aerial</mat-option>
+              <mat-option value="BingRoadStatic">Bing Road (static)</mat-option>
+              <mat-option value="BingRoadDynamic">Bing Road (dynamic)</mat-option>
+              <mat-option value="HERENormalDay">HERE Normal Day</mat-option>
+              <mat-option value="HERENormalDayTransit">HERE Normal Day Transit</mat-option>
+              <mat-option value="HERETerrainDay">HERE Terrain Day</mat-option>
+              <mat-option value="HEREHybridDay">HERE Hybrid Day</mat-option>
+              <mat-option value="StamenWatercolor">Stamen Watercolor</mat-option>
+              <mat-option value="StamenTerrain">Stamen Terrain</mat-option>
+              <mat-option value="StamenToner">Stamen Toner</mat-option>
+              <mat-option value="ArcGIS">ArcGIS</mat-option>
+              <mat-option value="ThunderforestOpenCycleMap">Thunderforest OpenCycleMap</mat-option>
+              <mat-option value="ThunderforestTransport">Thunderforest Transport</mat-option>
+              <mat-option value="ThunderforestLandscape">Thunderforest Landscape</mat-option>
+              <mat-option value="ThunderforestOutdoors">Thunderforest Outdoors</mat-option>
+              <mat-option value="ThunderforestTransportDark">Thunderforest Transport Dark</mat-option>
+              <mat-option value="ThunderforestSpinalMap">Thunderforest Spinal Map</mat-option>
+              <mat-option value="ThunderforestPioneer">Thunderforest Pioneer</mat-option>
+              <mat-option value="ThunderforestMobileAtlas">Thunderforest Mobile Atlas</mat-option>
+              <mat-option value="ThunderforestNeighbourhood">Thunderforest Neighbourhood</mat-option>
+            </mat-select>
           </mat-form-field>
+
+          <mat-form-field class="not-first" style="width: 300px;">
+            <mat-label i18n="@@MeasuredParameter">Measured Parameter</mat-label>
+            <mat-select matInput [formControl]="MeasuredParameterId" id="measuredparameterid">
+              <mat-option *ngFor="let measuredparameter of measuredparameters" [value]="measuredparameter.Id">
+                {{measuredparameter.Name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="not-first">
+            <mat-label i18n="@@Posts">Posts</mat-label>
+            <mat-select #multiselect multiple (selectionChange)="changePosts($event)">
+              <mat-option *ngFor="let post of selectedPosts" [value]="post.Id" [id]="post.Id">
+                {{post.Name}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <mat-form-field class="not-first">
+            <mat-label i18n="@@Date">Date</mat-label>
+            <input matInput [matDatepicker]="picker" [formControl]="date" (dateChange)="changeDate()">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
 
-    <mat-grid-tile [colspan]="5" [rowspan]="11">
+    
+
+    <mat-grid-tile [colspan]="5" [rowspan]="15">
       <mat-card class="dashboard-card">
-        <mat-card-content class="dashboard-card-content">
+        <mat-spinner [style.display]="spinner ? 'block' : 'none'"></mat-spinner>
+        <mat-card-content [style.display]="!spinner ? '' : 'none'" class="dashboard-card-content">
           <div id="map" class="map"></div>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
 
-    <mat-grid-tile [colspan]="5" [rowspan]="11">
+    <mat-grid-tile [colspan]="5" [rowspan]="15">
       <mat-card class="dashboard-card" style="overflow: auto;">
-        </mat-card>
+        <mat-spinner [style.display]="spinner ? 'block' : 'none'"></mat-spinner>
+        <mat-card-content [style.display]="!spinner ? '' : 'none'" class="dashboard-card-content">
+          <div id="chart">
+
+          </div>
+        </mat-card-content>
+      </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
 </div>
