SmartEcoA: add new reports

--- a/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
@@ -24,4 +24,12 @@
   <a i18n-matTooltip="@@CreateCarPostDataAutoTestLog" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdataautotestlog']" matTooltip="Create Log of vehicle emissions test results (Gasoline)">
     <span i18n="@@CreateCarPostDataAutoTestLog">Create Log of vehicle emissions test results (Gasoline)</span>
   </a>
+  <br />
+  <a i18n-matTooltip="@@CreateCarPostsProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarpostsprotocol']" matTooltip="Create Report car posts for the day">
+    <span i18n="@@CreateCarPostsProtocol">Create Report car posts for the day</span>
+  </a>
+  <br />
+  <a i18n-matTooltip="@@CreateCarsExcessProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarsexcessprotocol']" matTooltip="Create Report on repeated exceedances cars at posts">
+    <span i18n="@@CreateCarsExcessProtocol">Create Report on repeated exceedances cars at posts</span>
+  </a>
 </div>
