--- a/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
@@ -25,8 +25,8 @@
     <span i18n="@@CreateCarPostDataAutoTestLog">Create Log of vehicle emissions test results (Gasoline)</span>
   </a>
   <br />
-  <a i18n-matTooltip="@@CreateCarPostsProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarpostsprotocol']" matTooltip="Create Report car posts for the day">
-    <span i18n="@@CreateCarPostsProtocol">Create Report car posts for the day</span>
+  <a i18n-matTooltip="@@CreateCarPostsProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarpostsprotocol']" matTooltip="Create Report car posts for the period">
+    <span i18n="@@CreateCarPostsProtocol">Create Report car posts for the period</span>
   </a>
   <br />
   <a i18n-matTooltip="@@CreateCarsExcessProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarsexcessprotocol']" matTooltip="Create Report on repeated exceedances cars at posts">
