CarPostClient, Server: add transliteration dopol2, SmartEcoA: change excess calculation

--- a/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarposts.component.html
@@ -32,4 +32,13 @@
   <a i18n-matTooltip="@@CreateCarsExcessProtocol" class="btn" [routerLink]="['/reports/create/carposts/createcarsexcessprotocol']" matTooltip="Create Report on repeated exceedances cars at posts">
     <span i18n="@@CreateCarsExcessProtocol">Create Report on repeated exceedances cars at posts</span>
   </a>
+  <br />
+  <br />
+  <a i18n-matTooltip="@@CreateCarPostDataAutoTestProtocolPeriod" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdataautotestprotocolperiod']" matTooltip="Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle for the period">
+    <span i18n="@@CreateCarPostDataAutoTestProtocolPeriod">Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle for the period</span>
+  </a>
+  <br />
+  <a i18n-matTooltip="@@CreateCarPostDataSmokeMeterProtocolPeriod" class="btn" [routerLink]="['/reports/create/carposts/createcarpostdatasmokemeterprotocolperiod']" matTooltip="Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle for the period (Diesel)">
+    <span i18n="@@CreateCarPostDataSmokeMeterProtocolPeriod">Create Report of measurements of harmful emissions in the exhaust gases of a motor vehicle for the period (Diesel)</span>
+  </a>
 </div>
