SmartEcoA: add report Excel, changing the names of reports

--- a/SmartEcoA/ClientApp/src/app/reports/createcarpostsprotocol.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarpostsprotocol.component.html
@@ -29,9 +29,10 @@
       </mat-form-field>
       <mat-form-field class="not-first">
         <mat-label i18n="@@TypeReport">Type Report</mat-label>
-        <mat-select formControlName="SelectedTypeReport">
-          <mat-option value="false">Word</mat-option>
-          <mat-option value="true">PDF</mat-option>
+        <mat-select [formControl]="SelectedTypeReport">
+          <mat-option *ngFor="let typereportValue of typesreportValue" [value]="typereportValue">
+            {{typereportValue}}
+          </mat-option>
         </mat-select>
       </mat-form-field>
       <br />
