--- a/SmartEcoA/ClientApp/src/app/reports/createcarpostdataautotestprotocolperiod.component.html
+++ b/SmartEcoA/ClientApp/src/app/reports/createcarpostdataautotestprotocolperiod.component.html
@@ -28,18 +28,20 @@
         <mat-datepicker #picker2></mat-datepicker>
       </mat-form-field>
       <mat-form-field class="not-first">
-        <mat-label i18n="@@CarPost">Car Post</mat-label>
-        <mat-select [formControl]="CarPostId">
-          <mat-option *ngFor="let carpost of carposts" [value]="carpost.Id">
-            {{carpost.Name}}
+        <mat-label i18n="@@CarPosts">Car Posts</mat-label>
+        <mat-select #multiselect [formControl]="CarPostsId" multiple>
+          <mat-option #allSelected [value]="0" (click)="toggleAllSelection()">Выбрать все</mat-option>
+          <mat-option *ngFor="let allCarPost of allCarPosts" [value]="allCarPost.Id" (click)="tosslePerOne(allSelected.viewValue)">
+            {{allCarPost.Name}}
           </mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field class="not-first">
         <mat-label i18n="@@TypeReport">Type Report</mat-label>
-        <mat-select formControlName="SelectedTypeReport">
-          <mat-option value="false">Word</mat-option>
-          <mat-option value="true">PDF</mat-option>
+        <mat-select [formControl]="SelectedTypeReport">
+          <mat-option *ngFor="let typereportValue of typesreportValue" [value]="typereportValue">
+            {{typereportValue}}
+          </mat-option>
         </mat-select>
       </mat-form-field>
       <br />
